# mlds-final-project

./: .gitignore  README.md  pyproject.toml
Milestone2/: .gitignore  MLDS_RP_MS2_Rcode.Rmd  MLDS_RP_MS2_Rcode.html  core.R
Phase1/: README.md  phase1.Rmd  playground.jl
Phase1/base_case/: base_sim.jl  laplace_mixtures.jl
Phase1/posterior_coarsening/: coarsen_setup.jl  coarsen_sim.jl  setup.jl
Research/: phase1.Rmd  utils.R
Research/base_cases/: base_cases_analysis.Rmd  gaussian_mixtures.jl  gaussian_mixtures.sh  laplace_mixtures.jl  laplace_mixtures.sh
Research/coarsening/: coarsening_analysis.Rmd  core.jl  setup.jl  setup_1d.jl  setup_2d.jl  skew_norm_coarsen_sim.jl  skew_norm_coarsen_sim.out  skew_norm_coarsen_sim.sh  t_coarsen_sim.jl
Research/comp_outputs/: k_posteriors-alpha=100-n=10000.jld  k_posteriors-alpha=100.0-n=100.jld  k_posteriors-alpha=100.0-n=1000.jld  k_posteriors-alpha=100.0-n=250.jld  k_posteriors-alpha=100.0-n=2500.jld  k_posteriors-alpha=100.0-n=500.jld  k_posteriors-alpha=100.0-n=5000.jld  k_posteriors-alpha=1000.0-n=100.jld  k_posteriors-alpha=1000.0-n=1000.jld  k_posteriors-alpha=1000.0-n=10000.jld  k_posteriors-alpha=1000.0-n=250.jld  k_posteriors-alpha=1000.0-n=2500.jld  k_posteriors-alpha=1000.0-n=500.jld  k_posteriors-alpha=1000.0-n=5000.jld  k_posteriors-alpha=10000.0-n=100.jld  k_posteriors-alpha=10000.0-n=1000.jld  k_posteriors-alpha=10000.0-n=10000.jld  k_posteriors-alpha=10000.0-n=250.jld  k_posteriors-alpha=10000.0-n=2500.jld  (+13 more)
ms2/: MLDS_RP_MS2_Rcode.html  ref.bib
reseatch_project/: phase1.html
(+66147 files in other folders)
