[tool.poetry]
name = "mlds-final-project"
version = "0.1.0"
description = ""
authors = ["James Lee <jameslee.98331@gmail.com>"]
readme = "README.md"
packages = [{ include = "mlds_final_project" }]

[tool.poetry.dependencies]
python = "3.9.14"
numpy = "1.24.3"
pandas = "1.5.3"
ipykernel = "6.23.0"
matplotlib = "3.7.1"
scipy = "1.10.1"
pymc = "^5.3.1"
pystan = "^3.7.0"
nest-asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
