[tool.poetry]
name = "mlds-final-project"
version = "0.1.0"
description = ""
authors = ["James Lee <jameslee.98331@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.14"
numpy = "1.24.3"
pandas = "1.5.3"
ipykernel = "6.23.0"
matplotlib = "3.7.1"
scipy = "1.10.1"
umap-learn = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
